<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.lljackie.test3_view.MainActivity">

    <EditText
        android:id="@+id/et_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/edittext"
        android:textSize="30sp" />

    <Button
        android:id="@+id/bt_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/button"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/tv_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/textview"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/cb_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/checkbox1"
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:id="@+id/cb_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/checkbox2"
        android:onClick="onCheckBoxClick"/>

    <CheckBox
        android:id="@+id/cb_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/checkbox3"
        android:onClick="onCheckBoxClick"/>

    <RadioGroup
        android:layout_marginTop="@dimen/margin"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rg"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_1"
            android:text="@string/radiobutton1"
            android:onClick="onRadioButtonClick"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_2"
            android:text="@string/radiobutton2"
            android:onClick="onRadioButtonClick"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_3"
            android:text="@string/radiobutton3"
            android:onClick="onRadioButtonClick"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_height="wrap_content" />
    </RadioGroup>
</LinearLayout>
